Overflow issue fixed

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -87,6 +87,10 @@ only screen and (min-width: 768px) and (max-width: 991px) {
 @media (max-width: 768px) {
 
     #header-sticky {
+        padding: 18px 0;
+    }
+
+    .nav_container {
         display: none;
     }
 
@@ -138,7 +142,9 @@ only screen and (min-width: 768px) and (max-width: 991px) {
     .program_card,
     .events_cards_block .event_card,
     .footer_inner .footer_col_1,
-    .footer_inner .footer_col_2 {
+    .footer_inner .footer_col_2,
+    .logo_container,
+    .header_cta {
         flex: 0 0 auto;
         width: 50%;
     }
@@ -163,7 +169,8 @@ only screen and (min-width: 768px) and (max-width: 991px) {
     .process_inner .heading,
     .program_title,
     .subject_inner .heading_text h2,
-    .event_heading_block .heading_block .heading h2 {
+    .event_heading_block .heading_block .heading h2,
+    .service_inner .heading {
         font-size: 55px;
     }
 
