--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ body {
     font-weight: normal;
     color: var(--tp-text-body);
     line-height: 26px;
+    overflow-x: hidden;
 }
 
 h1,
